# OmegaBox_Server

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.config/production/: gunicorn.py  omegabox.nginx  supervisord.conf
.github/workflows/: aws.yml
app/: requirements.txt  youtube.py
app/config/: celery.py  storages.py  urls.py
app/config/settings/: __init__.py  _base.py  develop.py  production.py
app/crawling/: api_urls.py  datas.py  datas_from.py  jsons_rw.py  sample.json
app/crawling/jsons/: boxoffice_daily.json  code.json  company_list.json  movie_list.json  people_list.json
app/members/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
app/members/migrations/: 0001_initial.py  0002_auto_20200628_2307.py  0002_auto_20200703_1507.py  0002_auto_20200704_1325.py  0002_auto_20200706_1638.py  0002_profile.py  0003_auto_20200703_1507.py  0003_auto_20200704_1325.py  0003_auto_20200706_1638.py  0003_profile_is_disabled.py  0004_auto_20200705_1310.py  0004_member_unique_id.py  0005_auto_20200705_1312.py  0005_auto_20200716_1637.py  0006_auto_20200705_1335.py  0006_auto_20200811_1506.py
app/movies/: admin.py  models.py  serializers.py  urls.py  views.py
app/movies/migrations/: 0001_initial.py  0002_movie_screens.py  0003_auto_20200628_2228.py  0003_auto_20200630_1616.py  0003_auto_20200701_1604.py  0003_auto_20200707_2258.py  (+6 more)
app/reservations/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
app/theaters/: admin.py  models.py  params.py  serializers.py  urls.py  utils.py  views.py
app/utils/: __init__.py  bootpay.py  business_data.py  excepts.py  omegabox_data.py
crawling/: jsons_write.py
crawling/jsons/: boxoffice_daily.json  boxoffice_weekly.json  code.json  company_info.json  company_list.json  movie_info.json  movie_list.json  people_info.json  people_list.json
(+30 files in other folders)
