[tool.poetry]
name = "caloculator"
version = "0.1.0"
description = ""
authors = ["qu3vipon <sdh5813@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "<3.0"
djangorestframework = "^3.11.0"
boto3 = "^1.14.8"
awscli = "^1.18.85"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
